--- a/src/pages/Grupos/Grupos.css
+++ b/src/pages/Grupos/Grupos.css
@@ -6,7 +6,7 @@
     max-width: 1200px;
     margin: 0 auto;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #ffffff; 
+    background-color: #E1BEE7; 
     min-height: 100vh;
 }
 
