--- a/src/pages/Grupos/Grupos.css
+++ b/src/pages/Grupos/Grupos.css
@@ -522,6 +522,12 @@
     overflow: hidden;
 }
 
+.fb-feed-center {
+    width: 100%;
+    max-width: 1000px;   
+    margin: 0 auto;
+}
+
 /* Alineación textos internos */
 .post-top-header, 
 .post-user-meta, 
@@ -554,6 +560,13 @@
     padding-top: 10px;
     border-top: 1px solid #e4e6eb;
 }
+
+.publish-area {
+    width: 100%;
+    max-width: 1000px;
+    min-width: 95%;
+}
+
 
 .post-top-header { display: flex; align-items: center; gap: 12px; margin-bottom: 12px; position: relative; }
 .post-user-meta { display: flex; flex-direction: column; flex: 1; }
