--- a/src/pages/Grupos/Grupos.css
+++ b/src/pages/Grupos/Grupos.css
@@ -514,9 +514,9 @@
     flex-direction: column;
     align-items: center; 
     gap: 16px;
-    padding: 16px;
+    padding: 16px; 
     width: 100%;
-}
+    box-sizing: border-box; 
 
 /* ✅ RECUADRO BLANCO MÁS ANCHO QUE ANTES (980px) */
 .fb-card-white {
@@ -525,10 +525,19 @@
     padding: 12px 0px; 
     box-shadow: 0 1px 2px rgba(0,0,0,0.1);
     margin-bottom: 16px;
-    width: 100%;
+    width: 100%; 
     max-width: 900px; 
-    box-sizing: border-box;
+    box-sizing: border-box; /* Esto evita que se salga del contenedor */
     overflow: hidden;
+}
+
+/* margen */
+@media (max-width: 768px) {
+    .fb-card-white {
+        width: 95%; 
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 
 .fb-feed-center {
